--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,23 @@
 {
+  "files.autoSave": "afterDelay",
+  "files.autoSaveDelay": 1000,
     "editor.tokenColorCustomizations": {
-        "comments": "#0aef47"
-      },
+      "textMateRules": [
+        {
+            "scope": [
+              "comment",
+              "punctuation.definition.comment",
+              "comment.line.number-sign.python",
+              "punctuation.definition.comment.python",
+              "comment.line.number-sign.python",
+              "source.python"
+            ],
+            "settings": {
+                "fontStyle": "italic",
+                "foreground": "#33ff70"
+            }
+                      
+      }
+      ]
+    }
 }
